k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employeehub-backend
  namespace: employeehub
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employeehub-backend
  template:
    metadata:
      labels:
        app: employeehub-backend
    spec:
      containers:
        - name: backend
          image: ps73171/employeehub-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
