k8s/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employeehub-database
  namespace: employeehub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employeehub-database
  template:
    metadata:
      labels:
        app: employeehub-database
    spec:
      containers:
        - name: postgres
          image: postgres:16
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: postgres-storage
          emptyDir: {}
