k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employeehub-frontend
  namespace: employeehub
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employeehub-frontend
  template:
    metadata:
      labels:
        app: employeehub-frontend
    spec:
      containers:
        - name: frontend
          image: ps73171/employeehub-frontend:27
          imagePullPolicy: Always
          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 256Mi

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
