k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employeehub-frontend
  namespace: employeehub
spec:
  type: ClusterIP
  selector:
    app: employeehub-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
